--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <scm>
         <connection>scm:git:git://github.com:DocumentIndexing/ElasticSearch.git</connection>
         <developerConnection>scm:git:git@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
-        <tag>ElasticSearch-0.0.10</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
