investigating release issue

--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
         </plugins>
     </build>
     <scm>
-        <connection>scm:git:git://github.com:DocumentIndexing/ElasticSearch.git</connection>
-        <developerConnection>scm:git:git@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
-        <tag>HEAD</tag>
+        <connection>scm:git:ssh://github.com:DocumentIndexing/ElasticSearch.git</connection>
+        <developerConnection>scm:git:ssh@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
+
     </scm>
     <distributionManagement>
         <repository>
