--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.g4pas.index.document.elastic</groupId>
     <artifactId>ElasticSearch</artifactId>
-    <version>0.0.11</version>
+    <version>0.0.11-SNAPSHOT</version>
     <packaging>pom</packaging>
     <build>
         <plugins>
@@ -68,11 +68,10 @@
         </plugins>
     </build>
     <scm>
-        <connection>scm:git:git://github.com:DocumentIndexing/ElasticSearch.git</connection>
-        <developerConnection>scm:git:git@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
+        <connection>scm:git:ssh://github.com:DocumentIndexing/ElasticSearch.git</connection>
+        <developerConnection>scm:git:ssh://github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
 
-        <tag>ElasticSearch-0.0.11</tag>
-  </scm>
+    </scm>
     <distributionManagement>
         <repository>
             <id>Tracer-Release-Nexus</id>
