--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.g4pas.index.document.elastic</groupId>
     <artifactId>ElasticSearch</artifactId>
-    <version>0.0.20</version>
+    <version>0.0.21-SNAPSHOT</version>
     <packaging>pom</packaging>
     <build>
         <plugins>
@@ -71,7 +71,7 @@
         <connection>scm:git:git://github.com:DocumentIndexing/ElasticSearch.git</connection>
         <developerConnection>scm:git:git@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
 
-      <tag>ElasticSearch-0.0.20</tag>
+      <tag>HEAD</tag>
   </scm>
     <distributionManagement>
         <repository>
