Added Latest to release

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                                 <dockerFileDir>.</dockerFileDir>
                                 <tags>
                                     <tag>${project.version}</tag>
+                                    <tag>latest</tag>
                                 </tags>
                                 <assembly>
                                     <inline>
