--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,6 @@
                 <extensions>true</extensions>
                 <executions>
                     <execution>
-                        <id>image-push</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                    <execution>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>build</goal>
@@ -31,13 +24,15 @@
                     <verbose>true</verbose>
                     <images>
                         <image>
-                            <name>documentindexer-elasticsearch:%l</name>
-                            <build>
-                                <dockerFileDir>.</dockerFileDir>
-                                <tags>
-                                    <tag>${project.version}</tag>
-                                    <tag>latest</tag>
-                                </tags>
+                          <name>${dockerhub.image.name}</name>
+                          <alias>searchui</alias>
+                          <build>
+                              <dockerFileDir>.</dockerFileDir>
+                              <nocache>true</nocache>
+                              <tags>
+                                  <tag>${project.version}</tag>
+                                  <tag>latest</tag>
+                              </tags>
                                 <assembly>
                                     <inline>
                                         <fileSets>
@@ -55,6 +50,45 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <executions>
+                    <execution>
+                        <id>tag-dockerhub-version</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>tag</goal>
+                        </goals>
+                        <configuration>
+                            <image>${dockerhub.image.name}:${project.version}</image>
+                            <newName>${dockerhub.project}/${dockerhub.image.name}:${project.version}</newName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>tag-dockerhub-latest</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>tag</goal>
+                        </goals>
+                        <configuration>
+                            <image>${dockerhub.image.name}:${project.version}</image>
+                            <newName>${dockerhub.project}/${dockerhub.image.name}:latest</newName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>push-image</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>push</goal>
+                        </goals>
+                        <configuration>
+                            <imageName>${dockerhub.project}/${dockerhub.image.name}:${project.version}</imageName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
                 <dependencies>
@@ -68,6 +102,10 @@
 
         </plugins>
     </build>
+    <properties>
+      <dockerhub.project>guidof</dockerhub.project>
+      <dockerhub.image.name>documentindexer-elasticsearch</dockerhub.image.name>
+    </properties>
     <scm>
         <connection>scm:git:git://github.com:DocumentIndexing/ElasticSearch.git</connection>
         <developerConnection>scm:git:git@github.com:DocumentIndexing/ElasticSearch.git</developerConnection>
